--- a/fontes/module/Application/view/application/index/index.phtml
+++ b/fontes/module/Application/view/application/index/index.phtml
@@ -1,42 +1,13 @@
-<head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ortho Life Login</title>
-    <!-- CSS -->
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/css/form-elements.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-</head>
-
 <body>
 
 <!-- Top content -->
 <div class="top-content">
-
     <div class="inner-bg">
         <div class="container">
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2 text">
                     <h1><strong>Ortho Life</strong> Login</h1>
-                 <!--   <div class="description">
-                        <p>
-                            This is a free responsive login form made with Bootstrap.
-                            Download it on <a href="http://azmind.com"><strong>AZMIND</strong></a>, customize and use it
-                            as you like!
-                        </p>
-                    </div>-->
+
                 </div>
             </div>
             <div class="row">
@@ -51,53 +22,49 @@
                         </div>
                     </div>
                     <div class="form-bottom">
-                        <form role="form" action="" method="post" class="login-form">
+                        <form  role="form" action="" method="post" class="form-horizontal">
                             <div class="form-group">
-                                <label class="sr-only" for="form-username">Usuário</label>
-                                <input type="text" name="form-username" placeholder="Username..."
-                                       class="form-username form-control" id="form-username">
+                                <div class="col-sm-12">
+                                    <label class="sr-only" for="form-username">Usuário</label>
+                                    <input type="text" name="form-username" placeholder="Usuário..."
+                                           class="form-username form-control" id="form-username">
+                                </div>
                             </div>
                             <div class="form-group">
-                                <label class="sr-only" for="form-password">Senha</label>
-                                <input type="password" name="form-password" placeholder="Password..."
-                                       class="form-password form-control" id="form-password">
+                                <div class="col-sm-12">
+                                    <label class="sr-only" for="form-password">Senha</label>
+                                    <input type="password" name="form-password" placeholder="Senha..."
+                                           class="form-password form-control" id="form-password">
+                                </div>
                             </div>
-                            <button type="submit" class="btn">Acessar!</button>
+                            <div class="form-group">
+                                <div class="col-sm-12">
+                                    <button type="submit" class="btn btn-success"><i class="fa fa-check">&nbsp;</i>Acessar
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="form-group ">
+                                <div class="col-sm-6">
+                                    <button type="submit" class="btn btn-primary"><i class="fa fa-user">&nbsp;</i>Solicitar Acesso
+                                    </button>
+                                </div>
+                                <div class="col-sm-6">
+                                    <button type="submit" class="btn btn-primary"><i class="fa fa-key">&nbsp;</i>Esqueci
+                                        a Senha
+                                    </button>
+                                </div>
+                            </div>
                         </form>
                     </div>
-                </div>
+                </div> <!--div do box preto-->
             </div>
-   <!--         <div class="row">
-                <div class="col-sm-6 col-sm-offset-3 social-login">
-                    <h3>...or login with:</h3>
-                    <div class="social-login-buttons">
-                        <a class="btn btn-link-2" href="#">
-                            <i class="fa fa-facebook"></i> Facebook
-                        </a>
-                        <a class="btn btn-link-2" href="#">
-                            <i class="fa fa-twitter"></i> Twitter
-                        </a>
-                        <a class="btn btn-link-2" href="#">
-                            <i class="fa fa-google-plus"></i> Google Plus
-                        </a>
-                    </div>
-                </div>
-            </div>-->
         </div>
     </div>
-
 </div>
 
-
 <!-- Javascript -->
-<script src="assets/js/jquery-1.11.1.min.js"></script>
-<script src="assets/bootstrap/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="assets/js/jquery.backstretch.min.js"></script>
-<script src="assets/js/scripts.js"></script>
-
-<!--[if lt IE 10]>
-<script src="assets/js/placeholder.js"></script>
-<![endif]-->
 
 </body>
+
 
