[add] Usuario Formulário

--- a/fontes/module/Application/view/application/index/index.phtml
+++ b/fontes/module/Application/view/application/index/index.phtml
@@ -39,19 +39,20 @@
                             </div>
                             <div class="form-group">
                                 <div class="col-sm-12">
-                                    <button type="submit" class="btn btn-success"><i class="fa fa-check">&nbsp;</i>Acessar
+                                    <button type="button" class="btn btn-success"><i class="fa fa-check">&nbsp;</i>Acessar
                                     </button>
                                 </div>
                             </div>
                             <div class="form-group ">
-                                <div class="col-sm-6">
-                                    <button type="submit" class="btn btn-primary"><i class="fa fa-user">&nbsp;</i>Solicitar Acesso
-                                    </button>
+                                <div class="col-sm-6 text-center">
+                                    <a href="/usuario/solicitarAcesso" style="color: #c8c5c5">
+                                    <i class="fa fa-user">&nbsp;</i>Solicitar Acesso
+                                    </a>
                                 </div>
-                                <div class="col-sm-6">
-                                    <button type="submit" class="btn btn-primary"><i class="fa fa-key">&nbsp;</i>Esqueci
-                                        a Senha
-                                    </button>
+                                <div class="col-sm-6 text-center">
+                                    <a href="#" style="color: #c8c5c5">
+                                    <i class="fa fa-key">&nbsp;</i>Esqueci a Senha
+                                    </a>
                                 </div>
                             </div>
                         </form>
