--- a/fontes/module/Application/view/layout/layout.phtml
+++ b/fontes/module/Application/view/layout/layout.phtml
@@ -1,45 +1,43 @@
-<?php echo $this->doctype();?>
+<?php echo $this->doctype();
+
+?>
 <html>
-<head>
+    <head>
+
         <meta charset="utf-8">
+
         <?php echo $this->headTitle('ORTHO LIFE ');?>
+
         <?php echo $this->headMeta()
             ->appendName('viewport', 'width=device-width, initial-scale=1.0')
             ->appendHttpEquiv('X-UA-Compatible', 'IE=edge')
         ?>
         <!-- Le styles -->
-        <?php echo $this->headLink(array(
-                'rel' => 'shortcut icon',
-                'type' => 'image/vnd.microsoft.icon',
-                'href' => $this->basePath() . '/img/favicon.ico'))
-
-                        ->prependStylesheet($this->basePath() . '/assets/css/style.css')
-                        ->prependStylesheet($this->basePath() . '/assets/bootstrap/css/bootstrap-theme.min.css')
-                        ->prependStylesheet($this->basePath() . '/assets/bootstrap/css/bootstrap.min.css')
-                        ->prependStylesheet($this->basePath() . '/assets/css/form-elements.css')
-                        ->prependStylesheet($this->basePath() . '/assets/font-awesome/css/font-awesome.min.css')
+        <?php echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.ico'))
+                        ->prependStylesheet($this->basePath() . 'assets/css/style.css')
+                        ->prependStylesheet($this->basePath() . '/css/bootstrap-theme.min.css')
+                        ->prependStylesheet($this->basePath() . 'assets/bootstrap/css/bootstrap.min.css')
+                        ->prependStylesheet($this->basePath() . 'assets/css/form-elements.css')
+                        ->prependStylesheet($this->basePath() . 'assets/font-awesome/css/font-awesome.min.css')
                         ->prependStylesheet($this->basePath() . 'http://fonts.googleapis.com/icon?family=Material+Icons')
-                        ->prependStylesheet($this->basePath() . 'http://fonts.googleapis.com/css?family=Roboto:400,100,300,500')
-                        ->appendStylesheet($this->basePath() . '/css/jquery-ui.css');
+                        ->prependStylesheet($this->basePath() . 'http://fonts.googleapis.com/css?family=Roboto:400,100,300,500');
         ?>
         <!-- Scripts -->
         <?php echo $this->headScript()
+            ->prependFile($this->basePath() . 'assets/bootstrap/js/bootstrap.min.js')
             ->prependFile($this->basePath() . '/js/jquery.min.js')
-            ->prependFile($this->basePath() . '/js/jquery-ui.min.js')
-            ->prependFile($this->basePath() . '/assets/bootstrap/js/bootstrap.min.js')
-            ->prependFile($this->basePath() . '/js/phpjs/php.full.min.js')
+            ->prependFile($this->basePath() . 'assets/js/jquery-1.11.1.js')
             ->prependFile($this->basePath() . 'assets/js/scripts.js')
             ->prependFile($this->basePath() . '/js/jquery-3.2.1.min.js')
             ->prependFile($this->basePath() . '/js/respond.min.js', 'text/javascript', array('conditional' => 'lt IE 9',))
-            ->prependFile($this->basePath() . '/js/html5shiv.js',   'text/javascript', array('conditional' => 'lt IE 9',));
-
-            ?>
+            ->prependFile($this->basePath() . '/js/html5shiv.js',   'text/javascript', array('conditional' => 'lt IE 9',))
+        ; ?>
 
     </head>
     <body>
         <div class="container">
             <?php echo $this->content; ?>
-        </div>
-        <?php echo $this->partial('partial/mensagem.phtml') ?>
+        </div> <!-- /container -->
+
     </body>
 </html>
