--- a/fontes/module/Application/view/layout/layout.phtml
+++ b/fontes/module/Application/view/layout/layout.phtml
@@ -2,42 +2,58 @@
 
 ?>
 <html>
-    <head>
+<head>
 
-        <meta charset="utf-8">
+    <meta charset="utf-8">
 
-        <?php echo $this->headTitle('ORTHO LIFE ');?>
+    <?php echo $this->headTitle('ORTHO LIFE '); ?>
 
-        <?php echo $this->headMeta()
-            ->appendName('viewport', 'width=device-width, initial-scale=1.0')
-            ->appendHttpEquiv('X-UA-Compatible', 'IE=edge')
-        ?>
-        <!-- Le styles -->
-        <?php echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.ico'))
-                        ->prependStylesheet($this->basePath() . 'assets/css/style.css')
-                        ->prependStylesheet($this->basePath() . '/css/bootstrap-theme.min.css')
-                        ->prependStylesheet($this->basePath() . 'assets/bootstrap/css/bootstrap.min.css')
-                        ->prependStylesheet($this->basePath() . 'assets/css/form-elements.css')
-                        ->prependStylesheet($this->basePath() . 'assets/font-awesome/css/font-awesome.min.css')
-                        ->prependStylesheet($this->basePath() . 'http://fonts.googleapis.com/icon?family=Material+Icons')
-                        ->prependStylesheet($this->basePath() . 'http://fonts.googleapis.com/css?family=Roboto:400,100,300,500');
-        ?>
-        <!-- Scripts -->
-        <?php echo $this->headScript()
-            ->prependFile($this->basePath() . 'assets/bootstrap/js/bootstrap.min.js')
-            ->prependFile($this->basePath() . '/js/jquery.min.js')
-            ->prependFile($this->basePath() . 'assets/js/jquery-1.11.1.js')
-            ->prependFile($this->basePath() . 'assets/js/scripts.js')
-            ->prependFile($this->basePath() . '/js/jquery-3.2.1.min.js')
-            ->prependFile($this->basePath() . '/js/respond.min.js', 'text/javascript', array('conditional' => 'lt IE 9',))
-            ->prependFile($this->basePath() . '/js/html5shiv.js',   'text/javascript', array('conditional' => 'lt IE 9',))
-        ; ?>
+    <?php echo $this->headMeta()
+        ->appendName('viewport', 'width=device-width, initial-scale=1.0')
+        ->appendHttpEquiv('X-UA-Compatible', 'IE=edge')
+    ?>
+    <!-- Le styles -->
+    <?php echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.ico'))
+        ->prependStylesheet($this->basePath() . 'assets/css/style.css')
+        ->prependStylesheet($this->basePath() . '/css/bootstrap-theme.min.css')
+        ->prependStylesheet($this->basePath() . 'assets/bootstrap/css/bootstrap.min.css')
+        ->prependStylesheet($this->basePath() . 'assets/css/form-elements.css')
+        ->prependStylesheet($this->basePath() . 'assets/font-awesome/css/font-awesome.min.css')
+        ->prependStylesheet($this->basePath() . 'http://fonts.googleapis.com/icon?family=Material+Icons')
+        ->prependStylesheet($this->basePath() . 'http://fonts.googleapis.com/css?family=Roboto:400,100,300,500');
+    ?>
 
-    </head>
-    <body>
-        <div class="container">
-            <?php echo $this->content; ?>
-        </div> <!-- /container -->
 
-    </body>
+</head>
+<body>
+<div id="ambiente-estado" class="homo"></div>
+<?php echo $this->partial('partial/mensagem.phtml') ?>
+<main class="<?php # echo $classSistema;?>">
+    <header id="header">
+        <?php /*echo $this->partial('partial/topo.phtml') */?>
+    </header>
+    <aside id="menu-esquerdo">
+        <ul class="menu-principal">
+            <?php /*echo $this->partial('partial/menu.phtml') */?>
+        </ul>
+    </aside>
+    <section id="container-conteudo">
+        <div class="row">
+            <div class="col-md-12 contentView">
+                <?php echo $this->content; ?>
+            </div>
+            <?php /*echo $this->partial('partial/rodape.phtml') */?>
+        </div>
+    </section>
+</main>
+<!-- Scripts -->
+<?php echo $this->headScript()
+    ->prependFile($this->basePath() . 'assets/bootstrap/js/bootstrap.min.js')
+    ->prependFile($this->basePath() . '/js/jquery.min.js')
+    ->prependFile($this->basePath() . 'assets/js/jquery-1.11.1.js')
+    ->prependFile($this->basePath() . 'assets/js/scripts.js')
+    ->prependFile($this->basePath() . '/js/jquery-3.2.1.min.js')
+    ->prependFile($this->basePath() . '/js/respond.min.js', 'text/javascript', array('conditional' => 'lt IE 9',))
+    ->prependFile($this->basePath() . '/js/html5shiv.js', 'text/javascript', array('conditional' => 'lt IE 9',)); ?>
+</body>
 </html>
